Inicio das view e algumas coisas utilitárias